# cs-demand-model

./: .gitignore  .gitpod.Dockerfile  .gitpod.yml  .pre-commit-config.yaml  README.md  blis  cost-play.py  cost-session-test.py  main.py  prediction-test.py  pyproject.toml  remain.py  run_model.py  run_model_class.py  server.py  testing_things.py
cs_demand_model/: prediction.py
cs_demand_model/rpc/: __init__.py  api.py  charts.py  (+5 more)
cs_demand_model_samples/: __init__.py
csdm-py/: frontend.py  ingress.py  model.py  viz.py
csdmpy/: CSDM.py  __init__.py  __main__.py  api.py  classy.py  config.py  constants.py  costs.py  datacontainer.py  frontend.py  indexer.py  ingress.py  model.py  population_stats.py  populations.py  prediction.py  super_model.py  timeseries.py  transitions.py  utils.py
csdmpy_fakedata/: __init__.py
docs/: README.md  configuration.ipynb  data-analysis.ipynb  data-container.ipynb  demand-model-fixed.ipynb  demand-model-prediction.ipynb  file-loader.ipynb  predict.ipynb
notebooks/: 10-datafiles.ipynb  20-population-stats.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  configuration.ipynb  data-analysis.ipynb  data-container.ipynb  populations-calculations.ipynb  populations.ipynb  predictions.ipynb  predictor-dev.ipynb  timeseries-concat.ipynb  transition-rates.ipynb
templates/: index.html
tests/: test_config_age_brackets.py  test_config_placement_categories.py  test_constants_age_brackets.py  test_constants_placement_types.py  test_datacontainer.py  test_prediction.py  test_prediction_ageing.py  test_state_adjustments.py  test_state_inspection.py  test_t2_session.py  test_timeseries.py
(+19 files in other folders)
