[tool.poetry]
name = "csdmpy"
version = "0.1.0"
description = "Python port of Social Finance's children's social care demand model"
authors = ["dezog", "tab1tha"]

[tool.poetry.dependencies]
numpy = "1.22.3"
pandas = "1.4.2"
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
coverage = "^6.3"
matplotlib = "^3.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
