[tool.poetry]
name = "csdmpy"
version = "0.1.0"
description = "Python port of Social Finance's children's social care demand model"
authors = ["dezog", "tab1tha"]

[tool.poetry.dependencies]
numpy = "1.22.3"
pandas = "1.4.2"
python = "^3.10"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
coverage = "^6.3"
matplotlib = "^3.5.2"
Flask = "^2.1.2"
Flask-Cors = "^3.0.10"
tqdm = "^4.64.1"
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
